реализация задания